--- a/app/src/main/res/layout/fragment_poop_calendar.xml
+++ b/app/src/main/res/layout/fragment_poop_calendar.xml
@@ -26,13 +26,19 @@ tools:context=".View.PoopCalendarFragment"
     android:orientation="horizontal"
     app:layout_constraintGuide_begin="80dp" />
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/main_list"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/guideline2" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/week_recycle_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/day_recycle_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/week_recycle_layout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
