--- a/app/src/main/res/layout/fragment_poop_calendar.xml
+++ b/app/src/main/res/layout/fragment_poop_calendar.xml
@@ -36,7 +36,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/week_recycle_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include_message"
         app:layout_constraintVertical_bias="0.0" />
