--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,17 @@
     <color name="ex_sub">#272863</color>
     <color name="ex_text">#545454</color>
     <color name="ex_thema">#FFEB35</color>
+
+    <!-- ActionBarの背景色 -->
+    <color name="colorPrimary">@color/ex_text</color>
+    <!-- ステータスバーの背景色 -->
+    <color name="colorPrimaryDark">@color/ex_text</color>
+    <!-- TabLayoutの下線やRadioButton選択時などの色 -->
+    <color name="colorAccent">@color/ex_sub</color>
+    <!-- ActionBarの文字色 -->
+    <color name="textColorPrimary">@color/ex_text</color>
+    <!-- ウィンドウ背景色 -->
+    <color name="windowBackground">@color/ex_gray</color>
+    <!-- ナビゲーションバー（戻るキー・ホームキーなどがあるバー）の背景色 -->
+    <color name="navigationBarColor">@color/ex_text</color>
 </resources>
