Inputロジックの実装

--- a/app/src/main/res/layout/fragment_input_poop.xml
+++ b/app/src/main/res/layout/fragment_input_poop.xml
@@ -251,10 +251,9 @@
                     android:id="@+id/shape_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginVertical="10dp"
                     android:layout_marginEnd="20dp"
                     android:orientation="horizontal"
-                    android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -264,7 +263,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="120dp"
                         android:orientation="vertical"
                         android:layout_marginLeft="10dp">
 
@@ -276,20 +275,26 @@
                             android:textColor="@color/ex_text"
                             android:textAlignment="center"/>
 
-                        <ImageButton
-                            android:id="@+id/poop_shape_korokoro"
-                            style="?android:attr/borderlessButtonStyle"
+                        <androidx.cardview.widget.CardView
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/poop_shape1" />
+                            app:cardCornerRadius="70dp">
+                            <ImageButton
+                                android:id="@+id/poop_shape_korokoro"
+                                style="?android:attr/borderlessButtonStyle"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:adjustViewBounds="true"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/poop_shape1" />
+                        </androidx.cardview.widget.CardView>
+
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="120dp"
                         android:orientation="vertical"
                         android:layout_marginLeft="10dp">
 
@@ -301,21 +306,28 @@
                             android:textColor="@color/ex_text"
                             android:textAlignment="center"/>
 
-                        <ImageButton
-                            android:id="@+id/poop_shape_semi_korokoro"
-                            style="?android:attr/borderlessButtonStyle"
+                        <androidx.cardview.widget.CardView
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/poop_shape2" />
+                            app:cardCornerRadius="70dp">
+
+                            <ImageButton
+                                android:id="@+id/poop_shape_semi_korokoro"
+                                style="?android:attr/borderlessButtonStyle"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:adjustViewBounds="true"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/poop_shape2" />
+
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="120dp"
                         android:orientation="vertical"
                         android:layout_marginLeft="10dp">
 
@@ -327,21 +339,26 @@
                             android:textColor="@color/ex_text"
                             android:textAlignment="center"/>
 
-                        <ImageButton
-                            android:id="@+id/poop_shape_normal"
-                            style="?android:attr/borderlessButtonStyle"
+                        <androidx.cardview.widget.CardView
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/poop_shape3" />
+                            app:cardCornerRadius="70dp">
+                            <ImageButton
+                                android:id="@+id/poop_shape_normal"
+                                style="?android:attr/borderlessButtonStyle"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:adjustViewBounds="true"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/poop_shape3" />
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="120dp"
                         android:orientation="vertical"
                         android:layout_marginLeft="10dp">
 
@@ -353,20 +370,25 @@
                             android:textColor="@color/ex_text"
                             android:textAlignment="center"/>
 
-                        <ImageButton
-                            android:id="@+id/poop_shape_semi_liquid"
-                            style="?android:attr/borderlessButtonStyle"
+                        <androidx.cardview.widget.CardView
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/poop_shape4" />
+                            app:cardCornerRadius="70dp">
+                            <ImageButton
+                                android:id="@+id/poop_shape_semi_liquid"
+                                style="?android:attr/borderlessButtonStyle"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:adjustViewBounds="true"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/poop_shape4" />
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="120dp"
                         android:orientation="vertical"
                         android:layout_marginLeft="10dp">
 
@@ -378,14 +400,19 @@
                             android:textColor="@color/ex_text"
                             android:textAlignment="center"/>
 
-                        <ImageButton
-                            android:id="@+id/poop_shape_liquid"
-                            style="?android:attr/borderlessButtonStyle"
+                        <androidx.cardview.widget.CardView
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/poop_shape5" />
+                            app:cardCornerRadius="70dp">
+                            <ImageButton
+                                android:id="@+id/poop_shape_liquid"
+                                style="?android:attr/borderlessButtonStyle"
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:adjustViewBounds="true"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/poop_shape5" />
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
                 </LinearLayout>
@@ -420,11 +447,30 @@
                 android:layout_height="1dp"
                 android:background="@color/ex_gray" />
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/volume_label"
+                android:text="中くらい"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"/>
+
             <!-- ボリューム選択シークバー -->
             <SeekBar
+                android:id="@+id/volume_bar"
+                android:min="1"
+                android:max="5"
+                android:progress="3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingVertical="20dp"/>
+
+        </LinearLayout>
 
             <!-- MEMO -->
             <LinearLayout
@@ -460,6 +506,7 @@
                 android:id="@+id/memo_edit"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/input_memo_layer_stroke"
