--- a/app/src/main/res/layout/fragment_the_day_detail.xml
+++ b/app/src/main/res/layout/fragment_the_day_detail.xml
@@ -2,45 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:clickable="true"
-    tools:context=".View.Calendar.PoopCalendarFragment">
-
+    tools:context=".View.TheDayDetail.TheDayDetailFragment">
 
     <include
         android:id="@+id/include_header"
         layout="@layout/layout_header"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
-
-    <include
-        android:id="@+id/include_message"
-        layout="@layout/component_poop_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/include_footer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include_header"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/week_recycle_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include_message"
-        app:layout_constraintVertical_bias="0.0" />
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/day_recycle_layout"
@@ -49,7 +26,7 @@
         app:layout_constraintBottom_toTopOf="@+id/include_footer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/week_recycle_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/include_header" />
 
     <include
         android:id="@+id/include_footer"
