--- a/app/src/main/res/layout/fragment_the_day_detail.xml
+++ b/app/src/main/res/layout/fragment_the_day_detail.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/day_recycle_layout"
+        android:id="@+id/poop_recycle_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/include_footer"
