週始まり変更ロジックの追加

--- a/app/src/main/res/layout/component_poop_message.xml
+++ b/app/src/main/res/layout/component_poop_message.xml
@@ -37,12 +37,13 @@
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:gravity="center_vertical"
-        android:paddingLeft="40dp"
+        android:paddingLeft="30dp"
         android:scaleType="centerCrop"
         android:src="@drawable/message_balloon"
         android:text="お腹を冷やさないようにね"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@color/ex_text"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/message_balloon"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/mr_poop"
