--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.UNCHILOG" parent="Theme.AppCompat.Light.NoActionBar">
+
+    <style name="Base.Theme.UNCHILOG" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="android:windowSplashScreenBackground" tools:targetApi="S">@color/ex_thema</item>
     </style>
-
 
 
     <style name="Theme.UNCHILOG" parent="Base.Theme.UNCHILOG">
