--- a/app/src/main/res/layout/component_poop_row.xml
+++ b/app/src/main/res/layout/component_poop_row.xml
@@ -7,7 +7,7 @@
 
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/parent_row_Layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -40,13 +40,14 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/poop_row_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toEndOf="@+id/parent_row_Layout"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -115,5 +116,18 @@
             android:textSize="11dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/no_poop_message"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="詳細なし"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/parent_row_Layout"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
