--- a/app/src/main/res/menu/poop_row_menu.xml
+++ b/app/src/main/res/menu/poop_row_menu.xml
@@ -7,4 +7,8 @@
     <item
         android:id="@+id/menu_delete"
         android:title="削除" />
+
+    <item
+        android:id="@+id/menu_close"
+        android:title="閉じる" />
 </menu>
