--- a/app/src/main/res/menu/poop_row_menu.xml
+++ b/app/src/main/res/menu/poop_row_menu.xml
@@ -9,6 +9,10 @@
         android:title="削除" />
 
     <item
+        android:id="@+id/menu_show_memo"
+        android:title="メモを表示" />
+
+    <item
         android:id="@+id/menu_close"
         android:title="閉じる" />
 </menu>
