--- a/app/src/main/res/layout/fragment_the_day_detail.xml
+++ b/app/src/main/res/layout/fragment_the_day_detail.xml
@@ -19,6 +19,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/poop_recycle_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include_header"/>
+
+    <include
+        android:id="@+id/include_message"
+        layout="@layout/component_poop_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include_header" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
@@ -28,40 +48,9 @@
         android:layout_centerHorizontal="true"
         app:adSize="BANNER"
         app:adUnitId="@string/admob_banner_id"
-        app:layout_constraintBottom_toTopOf="@+id/the_day_content_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include_header"/>
-
-    <LinearLayout
-        android:id="@+id/the_day_content_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/include_footer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adView">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/poop_recycle_layout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:visibility="gone" />
-
-
-        <include
-            android:id="@+id/include_message"
-            layout="@layout/component_poop_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:layout_marginTop="200dp"
-            android:visibility="visible" />
-
-    </LinearLayout>
-
-
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/include_footer"
