--- a/app/src/main/res/drawable/border_shape.xml
+++ b/app/src/main/res/drawable/border_shape.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="1dp"
-        android:color="@color/ex_text"/>
-
-
+        android:width="0.5dp"
+        android:color="@color/ex_gray"/>
 </shape>
