--- a/app/src/main/res/layout/component_poop_message.xml
+++ b/app/src/main/res/layout/component_poop_message.xml
@@ -19,8 +19,8 @@
 
     <ImageView
         android:id="@+id/message_balloon"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:scaleType="centerCrop"
@@ -32,8 +32,8 @@
 
     <TextView
         android:id="@+id/message_text"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:gravity="center_vertical"
@@ -44,6 +44,7 @@
         android:textAlignment="center"
         android:textColor="@color/ex_text"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/message_balloon"
         app:layout_constraintEnd_toEndOf="@+id/message_balloon"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/mr_poop"
