--- a/app/src/main/res/layout/fragment_poop_calendar.xml
+++ b/app/src/main/res/layout/fragment_poop_calendar.xml
@@ -37,9 +37,9 @@
         android:id="@+id/week_recycle_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include_message"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/include_message" />
 
 
     <androidx.recyclerview.widget.RecyclerView
