--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -203,7 +203,8 @@
                     android:layout_marginStart="20dp"
                     android:layout_weight="1"
                     android:text="@string/setting_app_lock_desc"
-                    android:textColor="@color/ex_text" />
+                    android:textColor="@color/ex_text"
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
